<resources>
    <string name="app_name">Custom Fortune</string>
    <string name="title">Custom Fortune</string>
    <string name="text_start">Start</string>
    <string name="text_result_title">Today\'s Fortune</string>
    <string name="text_image_alt">An image should be shown here.</string>
    <string name="text_restart">Can\'t Agree</string>
    <string name="title_about">About</string>
    <string name="description_about_app">This app tells your today\' fortune. You can use this app
         to check your fortune in the morning and you will be doing well as this app says or will not be doing well.
         In this app, you can customize your fortune that you will be told as you want so that you can even get totally nice fortune every single day.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_custom">Customize</string>
    <string name="description_each_fortune">description1</string>
    <string name="title_account">Account</string>
    <string name="text_label_account_name">User Name</string>
    <string name="text_color_title">Title Color</string>
    <string name="title_settings">Settings</string>
    <string name="text_image_title">Image</string>
    <string name="text_fortune_description_title">Message</string>
    <string name="button_update">Update</string>
    <string name="text_create">Create</string>
    <string name="Sample">sample text</string>
    <string name="text_remove">Remove</string>
    <string name="text_sample_description">Great day</string>
    <string name="text_name">Name</string>
    <string name="text_nickname">Guest,</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_choose_photo">Choose Photo</string>
    <string name="text_create_fortune">Create Fortune</string>
    <string name="text_edit_fortune">Edit Fortune</string>
    <string name="text_fortune_list">Fortune List</string>

    <string-array name="array_color">
        <item>Purple</item>
        <item>Teal</item>
        <item>Black</item>
        <item>White</item>
    </string-array>
</resources>