<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".uicontrollers.CreateFortuneFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/text_edit_description_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_sample_description"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toTopOf="@+id/button_create_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.331"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_fortune_description_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_image_title"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_fortune_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="264dp"
            android:text="@string/text_fortune_description_title"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_image_title" />

        <Button
            android:id="@+id/button_create_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="148dp"
            android:text="@string/text_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.915"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image_fortune"
            android:layout_width="150dp"
            android:layout_height="144dp"
            app:layout_constraintBottom_toTopOf="@+id/text_fortune_description_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_image_title"
            app:layout_constraintVertical_bias="0.516"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/button_taking_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_take_photo"
            app:layout_constraintBottom_toTopOf="@+id/button_choosing_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toEndOf="@+id/image_fortune"
            app:layout_constraintTop_toTopOf="@+id/image_fortune" />

        <Button
            android:id="@+id/button_choosing_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_choose_photo"
            app:layout_constraintBottom_toBottomOf="@+id/image_fortune"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_fortune" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>